# CountDownTimer

./: .travis.yml  Dockerfile-fedora  README.md  meson.build
src/: cdt.vala  cdtwin.ui  countdowntimer.gresource.xml  main.vala  meson.build
